meow-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: meow-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: meow
    http:
      paths:
      - path: /meow
        backend:
          serviceName: meow-svc
          servicePort: 80
